# investor-lab

./: README.md  fetch_etf_catalog.py  ingest_etf_holdings.py  main.py  pyproject.toml  sample_portfolio.json  streamlit_app.py  tmp_hedgefund_dependency_result.json
data/catalog/: us_etf_catalog.csv
data/holdings/: ARKK.csv  EEM.csv  IXUS.csv  QQQ.csv  SCHD.csv  VOO.csv  VTI.csv  VXUS.csv
earnings_clarity/: README.md  __init__.py  main.py  requirements.txt
earnings_clarity/app/: __init__.py  api.py  cli.py  config.py  exceptions.py  models.py  schemas.py
earnings_clarity/tests/: test_api.py  (+6 more)
economic_dependency_heatmap/: README.md  __init__.py  main.py  requirements.txt  sample_portfolio.json
economic_regime_translator/: README.md  __init__.py  main.py
etf_catalog/: __init__.py  fetcher.py
etf_ingest/: __init__.py  cli.py  ingestor.py  models.py
etf_overlap/: api.py  config.py  engine.py  exceptions.py  models.py  visualization.py
global_etf_exposure_map/: README.md  __init__.py  main.py  requirements.txt
globalgap/: README.md  __init__.py  main.py  sample_portfolio.json
harvest_alert/: README.md  __init__.py  main.py  requirements.txt
hedgefund_dependency_engine/: README.md  __init__.py  main.py  requirements.txt  sample_portfolio.json
ingestion_samples/: bulk_holdings_template.csv
moat_watch/: README.md  __init__.py  main.py
tests/: test_analysis.py  test_etf_catalog.py  test_ingestion.py  test_live_provider.py
true_cost_of_investing/: README.md  __init__.py  main.py
value_check/: README.md  __init__.py  main.py  requirements.txt
(+372 files in other folders)
